// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Default render 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  />
  <dt
    className=""
  />
</dl>
`;

exports[`Text bold value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    neutral accent
  </dd>
  <dt
    className=""
  >
    default(neutral) color
  </dt>
</dl>
`;

exports[`Text danger accent value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    danger accent
  </dd>
  <dt
    className=""
  >
    danger accent value
  </dt>
</dl>
`;

exports[`Text danger color value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
    color="danger"
  >
    danger accent
  </dd>
  <dt
    className=""
    color="danger"
  >
    danger color value
  </dt>
</dl>
`;

exports[`Text default(neutral) color 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    neutral accent
  </dd>
  <dt
    className=""
  >
    default(neutral) color
  </dt>
</dl>
`;

exports[`Text disable value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    neutral accent
  </dd>
  <dt
    className=""
  >
    default(neutral) color
  </dt>
</dl>
`;

exports[`Text info accent value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    info accent
  </dd>
  <dt
    className=""
  >
    info accent value
  </dt>
</dl>
`;

exports[`Text info color value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
    color="info"
  >
    info accent
  </dd>
  <dt
    className=""
    color="info"
  >
    info color value
  </dt>
</dl>
`;

exports[`Text italicized value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    neutral accent
  </dd>
  <dt
    className=""
  >
    default(neutral) color
  </dt>
</dl>
`;

exports[`Text major accent value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    major(default) accent
  </dd>
  <dt
    className=""
  >
    major accent value
  </dt>
</dl>
`;

exports[`Text major accent value with icon 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    <i
      className=""
      label="settings icon"
      value="major accent value"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable={false}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
        />
      </svg>
    </i>
    settings icon
  </dd>
  <dt
    className=""
  >
    major accent value
  </dt>
</dl>
`;

exports[`Text major color value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
    color="major"
  >
    major(default) accent
  </dd>
  <dt
    className=""
    color="major"
  >
    major color value
  </dt>
</dl>
`;

exports[`Text minor accent value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    minor accent
  </dd>
  <dt
    className=""
  >
    minor accent value
  </dt>
</dl>
`;

exports[`Text minor color value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
    color="minor"
  >
    minor accent
  </dd>
  <dt
    className=""
    color="minor"
  >
    minor color value
  </dt>
</dl>
`;

exports[`Text neutral accent value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    neutral accent
  </dd>
  <dt
    className=""
  >
    neutral accent value
  </dt>
</dl>
`;

exports[`Text settings icon value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    <i
      className=""
      label="settings icon"
      value="settings icon value"
    >
      <svg
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
        />
      </svg>
    </i>
    settings icon
  </dd>
  <dt
    className=""
  >
    settings icon value
  </dt>
</dl>
`;

exports[`Text success accent value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    success accent
  </dd>
  <dt
    className=""
  >
    success accent value
  </dt>
</dl>
`;

exports[`Text success color accent and value with icon 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
    color="success"
  >
    <i
      className=""
      color="success"
      label="success icon"
      value="success color value"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable={false}
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </i>
    success icon
  </dd>
  <dt
    className=""
    color="success"
  >
    success color value
  </dt>
</dl>
`;

exports[`Text success color value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
    color="success"
  >
    success accent
  </dd>
  <dt
    className=""
    color="success"
  >
    success color value
  </dt>
</dl>
`;

exports[`Text underlined value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    neutral accent
  </dd>
  <dt
    className=""
  >
    default(neutral) color
  </dt>
</dl>
`;

exports[`Text warning accent value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
  >
    warning accent
  </dd>
  <dt
    className=""
  >
    warning accent value
  </dt>
</dl>
`;

exports[`Text warning color value 1`] = `
<dl
  className=""
  role="data-field"
>
  <dd
    className=""
    color="warning"
  >
    warning accent
  </dd>
  <dt
    className=""
    color="warning"
  >
    warning color value
  </dt>
</dl>
`;
